from Peter Apian-Bennewitz.

Added explicit tests for on-edge intersections with polygons.  This should
eliminate stray rays and tiny light leaks that often appear even in
well-constructed geometry.

Added "-s up" option to pabopto2bsdf to allow for 180 degree symmetry,
meaning that data repeats after 180 degree rotation (as distinguished
from "-s bilateral" whose data is mirrored about a vertical plane).
Thanks to Helen Rose Wilson for the suggestion and informing me that
such a thing exists.

Removed upper limit on number of modifiers in rcontrib.

Put cap on maximum ambient gradient to avoid over-extrapolation of
poorly computed irradiance cache values.

Added robjutil +T option to triangulate all faces in .OBJ description.

Altered BSDF library to have both front and back diffuse transmittance
values, which can be different.  This was necessary to avoid issues
caused by measurement and modeling discrepancies.

Added pabopto2bsdf -g option to cull near-grazing scattering to avoid
issues with noise and negative values.

Increased default dynamic range from 32 to 100 in pcond and normtiff.

Added -o and -n options to genbox to create .OBJ output and segment
edges and corners for transparent materials.  Also added -s option
to control smoothing for .OBJ and Radiance with segmented rounding.

Made it so robjutil with the +r option for Radiance output now
produces normal smoothing unless normals are removed with -n.

Added exposure preservation to pcompos when possible (i.e., when
there is only one input or inputs agree on exposure).

Added -DSHARP_RGB compile-time option to use sharp RGB color space
rather than historic default.  This can make for more accurate color
calculations, but requires that materials be recalibrated.  The
PRIMARIES= line is also produced on output from rpict or rvu with
the correct set of primaries based on how the system was compiled.

Added automatic flushing to the output of total, except when the -r
(running subtotals) option is used.